[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
offset_right = 320
offset_bottom = 16
theme_override_constants/separation = 4

[node name="HPBar" type="ProgressBar" parent="TopBar"]
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_vertical = 1
max_value = 120.0
value = 120.0
show_percentage = false

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 6
text = "00:00"
horizontal_alignment = 1

[node name="KillLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"
horizontal_alignment = 2

[node name="BottomBar" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14
offset_right = 320
offset_bottom = 180
grow_horizontal = 2
grow_vertical = 0

[node name="XPLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "XP: 0"
